# ai-agentic-portfolio

./: .gitignore  README.md  pyproject.toml
agentic_portfolio/: __init__.py  common.py  eval_harness.py  rag_assistant.py  research_agent.py
ai_projects/: __init__.py  research_agent.py  task_planner.py
data/knowledge_base/: agent_workflows.md  portfolio_signals.md  project_design.md  rag_evaluation.md
docs/: INTERVIEW_GUIDE.md  PROJECT_REPORT.md
examples/: questions.txt
projects/llm-evaluation-harness/: README.md  run.py
projects/local-rag-assistant/: README.md  run.py
projects/multi-agent-task-planner/: README.md  run.py
projects/research-brief-agent/: README.md  run.py
tests/: test_eval_harness.py  test_rag_assistant.py  test_research_agent.py  test_task_planner.py
