[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agentic-portfolio"
version = "0.1.0"
description = "Portfolio projects for AI agents, RAG, and LLM evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Naveen Reddy" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_portfolio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
