[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agentic-projects"
version = "0.1.0"
description = "AI projects for agents, RAG, and evaluation workflows."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Naveen Reddy" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_projects*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
